最终版，需添加github文件床

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,39 +4,49 @@
   "nav.rightText": "Language",
   "tabbar.new": "New",
   "tabbar.history": "History",
-  "meta.model": "Elevator Model",
+  "meta.type": "Elevator type",
   "meta.floors": "Number of Floors",
-  "meta.site": "Construction Site",
-  "meta.date": "Construction Date",
-  "meta.person": "Construction Personnel",
-  "meta.number": "Elevator Number",
+  "meta.begin": "Starting floor",
+  "meta.site": "Site name",
+  "meta.date": "Date",
+  "meta.supervisor": "Control supervisor GO",
+  "meta.id": "Device number",
   "meta.submit": "Create Project",
-  "meta.model.placeholder": "Please enter the elevator model",
+  "meta.type.placeholder": "Please select the elevator type",
   "meta.floors.placeholder": "Please enter the number of floors",
-  "meta.site.placeholder": "Please enter the construction site",
-  "meta.date.placeholder": "Please select the construction date",
-  "meta.person.placeholder": "Please enter the construction personnel",
-  "meta.number.placeholder": "Please enter the elevator number",
-  "meta.model.msg": "Elevator model cannot be empty",
-  "meta.floors.msg": "Number of floors cannot be empty",
-  "meta.site.msg": "Construction site cannot be empty",
-  "meta.date.msg": "Construction date cannot be empty",
-  "meta.person.msg": "Construction personnel cannot be empty",
-  "meta.number.msg": "Elevator number cannot be empty",
+  "meta.begin.placeholder": "Please enter the starting floor",
+  "meta.site.placeholder": "Please enter the site name",
+  "meta.date.placeholder": "Please select the date",
+  "meta.supervisor.placeholder": "Please enter the control supervisor GO",
+  "meta.id.placeholder": "Please enter the device number",
+  "meta.type.msg": "Elevator type is required",
+  "meta.floors.msg": "Number of floors is required",
+  "meta.begin.msg": "Starting floor is required",
+  "meta.site.msg": "Site name is required",
+  "meta.date.msg": "Date is required",
+  "meta.supervisor.msg": "Control supervisor GO is required",
+  "meta.id.msg": "Device number is required",
   "meta.submit.success": "Project created successfully",
-  "middleFloor.doorHeight": "Door Height",
-  "middleFloor.doorWidth": "Door Width",
-  "middleFloor.riserHeight": "Kick Height",
-  "middleFloor.riserWidth": "Kick Width",
-  "middleFloor.riserMsg": "Kick height cannot be empty",
-  "middleFloor.doorHeight.placeholder": "Please enter the door height",
-  "middleFloor.doorWidth.placeholder": "Please enter the door width",
-  "middleFloor.riserHeight.placeholder": "Please enter the kick height",
-  "middleFloor.riserWidth.placeholder": "Please enter the kick width",
-  "middleFloor.doorHeight.msg": "Door height cannot be empty",
-  "middleFloor.doorWidth.msg": "Door width cannot be empty",
-  "middleFloor.riserHeight.msg": "Kick height cannot be empty",
-  "middleFloor.riserWidth.msg": "Kick width cannot be empty",
-  "middleFloor.next": "Next Floor",
-  "middleFloor.preview": "Preview"
+  "intergral.underSlabHeight": "Under slab height",
+  "intergral.underSlabHeight.placeholder": "Please enter the under slab height",
+  "intergral.underSlabHeight.msg": "Under slab height is required",
+  "intergral.elevatorTrip": "Elevator Trip",
+  "intergral.elevatorTrip.placeholder": "Please enter the elevator trip",
+  "intergral.elevatorTrip.msg": "Elevator Trip is required",
+  "intergral.pitHeight": "Pit height",
+  "intergral.pitHeight.placeholder": "Please enter the pit height",
+  "intergral.pitHeight.msg": "Pit height is required",
+  "intergral.preview": "Preview",
+  "intergral.next": "Next",
+  "intergral.submit.success": "Overall parameter setting successful",
+  "pit.heigth": "Pit height",
+  "pit.heigth.placeholder": "Please enter the pit height",
+  "pit.heigth.msg": "Pit height is required",
+  "pit.width": "Pit width",
+  "pit.width.placeholder": "Please enter the pit width",
+  "pit.width.msg": "Pit width is required",
+  "pit.depth": "Pit depth",
+  "pit.depth.placeholder": "Please enter the pit depth",
+  "pit.depth.msg": "Pit depth is required",
+  "pit.submit.success": "Pit parameter setting successful"
 }
