--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -4,39 +4,49 @@
   "nav.rightText": "Langue",
   "tabbar.new": "Nouveau",
   "tabbar.history": "Historique",
-  "meta.model": "Modèle d'ascenseur",
-  "meta.floors": "Nombre d'étages",
-  "meta.site": "Site de construction",
-  "meta.date": "Date de construction",
-  "meta.person": "Personnel de construction",
-  "meta.number": "Numéro d'ascenseur",
+  "meta.type": "Type d'ascenseur",
+  "meta.floors": "Nombre d'étage",
+  "meta.begin": "Étage de départ",
+  "meta.site": "Nom du chantier",
+  "meta.date": "Date",
+  "meta.supervisor": "Responsable de contrôle GO",
+  "meta.id": "Numéro appareil",
   "meta.submit": "Créer un projet",
-  "meta.model.placeholder": "Veuillez entrer le modèle d'ascenseur",
-  "meta.floors.placeholder": "Veuillez entrer le nombre d'étages",
-  "meta.site.placeholder": "Veuillez entrer le site de construction",
-  "meta.date.placeholder": "Veuillez sélectionner la date de construction",
-  "meta.person.placeholder": "Veuillez entrer le personnel de construction",
-  "meta.number.placeholder": "Veuillez entrer le numéro d'ascenseur",
-  "meta.model.msg": "Le modèle d'ascenseur ne peut pas être vide",
-  "meta.floors.msg": "Le nombre d'étages ne peut pas être vide",
-  "meta.site.msg": "Le site de construction ne peut pas être vide",
-  "meta.date.msg": "La date de construction ne peut pas être vide",
-  "meta.person.msg": "Le personnel de construction ne peut pas être vide",
-  "meta.number.msg": "Le numéro d'ascenseur ne peut pas être vide",
+  "meta.type.placeholder": "Veuillez sélectionner le type d'ascenseur",
+  "meta.floors.placeholder": "Veuillez saisir le nombre d'étage",
+  "meta.begin.placeholder": "Veuillez saisir l'étage de départ",
+  "meta.site.placeholder": "Veuillez saisir le nom du chantier",
+  "meta.date.placeholder": "Veuillez sélectionner la date",
+  "meta.supervisor.placeholder": "Veuillez saisir le nom du responsable de contrôle GO",
+  "meta.id.placeholder": "Veuillez saisir le numéro appareil",
+  "meta.type.msg": "Le type d'ascenseur est obligatoire",
+  "meta.floors.msg": "Le nombre d'étage est obligatoire",
+  "meta.begin.msg": "L'étage de départ est obligatoire",
+  "meta.site.msg": "Le nom du chantier est obligatoire",
+  "meta.date.msg": "La date est obligatoire",
+  "meta.supervisor.msg": "Le responsable de contrôle GO est obligatoire",
+  "meta.id.msg": "Le numéro appareil est obligatoire",
   "meta.submit.success": "Projet créé avec succès",
-  "middleFloor.doorHeight": "Hauteur de la porte",
-  "middleFloor.doorWidth": "Largeur de la porte",
-  "middleFloor.riserHeight": "Hauteur de coup de pied",
-  "middleFloor.riserWidth": "Largeur de coup de pied",
-  "middleFloor.riserMsg": "La hauteur de coup de pied ne peut pas être vide",
-  "middleFloor.doorHeight.placeholder": "Veuillez entrer la hauteur de la porte",
-  "middleFloor.doorWidth.placeholder": "Veuillez entrer la largeur de la porte",
-  "middleFloor.riserHeight.placeholder": "Veuillez entrer la hauteur de coup de pied",
-  "middleFloor.riserWidth.placeholder": "Veuillez entrer la largeur de coup de pied",
-  "middleFloor.doorHeight.msg": "La hauteur de la porte ne peut pas être vide",
-  "middleFloor.doorWidth.msg": "La largeur de la porte ne peut pas être vide",
-  "middleFloor.riserHeight.msg": "La hauteur de coup de pied ne peut pas être vide",
-  "middleFloor.riserWidth.msg": "La largeur de coup de pied ne peut pas être vide",
-  "middleFloor.next": "Prochain étage",
-  "middleFloor.preview": "Aperçu"
+  "intergral.underSlabHeight": "Hauteur sous dalle",
+  "intergral.underSlabHeight.placeholder": "Veuillez entrer la hauteur sous dalle",
+  "intergral.underSlabHeight.msg": "La hauteur sous dalle est requise",
+  "intergral.elevatorTrip": "Course",
+  "intergral.elevatorTrip.placeholder": "Veuillez entrer la course de l'ascenseur",
+  "intergral.elevatorTrip.msg": "La course de l'ascenseur est requise",
+  "intergral.pitHeight": "Hauteur cuvette",
+  "intergral.pitHeight.placeholder": "Veuillez entrer la hauteur de la cuvette",
+  "intergral.pitHeight.msg": "La hauteur de la cuvette est requise",
+  "intergral.preview": "Aperçu",
+  "intergral.next": "Suivant",
+  "intergral.submit.success": "Réglage des paramètres globaux réussi",
+  "pit.height": "Hauteur de la cuvette",
+  "pit.height.placeholder": "Veuillez entrer la hauteur de la cuvette",
+  "pit.height.msg": "La hauteur de la cuvette est requise",
+  "pit.width": "Largeur de la cuvette",
+  "pit.width.placeholder": "Veuillez entrer la largeur de la cuvette",
+  "pit.width.msg": "La largeur de la cuvette est requise",
+  "pit.depth": "Profondeur de la cuvette",
+  "pit.depth.placeholder": "Veuillez entrer la profondeur de la cuvette",
+  "pit.depth.msg": "La profondeur de la cuvette est requise",
+  "pit.submit.success": "Réglage de la cuvette réussi"
 }
