--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -4,39 +4,94 @@
   "nav.rightText": "语言",
   "tabbar.new": "新建",
   "tabbar.history": "历史",
-  "meta.model": "电梯型号",
+  "meta.type": "电梯型号",
   "meta.floors": "楼层数",
+  "meta.begin": "起始楼层",
   "meta.site": "施工地点",
   "meta.date": "施工日期",
-  "meta.person": "施工人员",
-  "meta.number": "电梯序号",
+  "meta.supervisor": "施工人员",
+  "meta.id": "电梯序号",
   "meta.submit": "创建项目",
-  "meta.model.placeholder": "请输入电梯型号",
+  "meta.type.placeholder": "请输入电梯型号",
   "meta.floors.placeholder": "请输入楼层数",
+  "meta.begin.placeholder": "请输入起始楼层",
   "meta.site.placeholder": "请输入施工地点",
   "meta.date.placeholder": "请选择施工日期",
-  "meta.person.placeholder": "请输入施工人员",
-  "meta.number.placeholder": "请输入电梯序号",
-  "meta.model.msg": "电梯型号不能为空",
+  "meta.supervisor.placeholder": "请输入施工人员",
+  "meta.id.placeholder": "请输入电梯序号",
+  "meta.type.msg": "电梯型号不能为空",
   "meta.floors.msg": "楼层数不能为空",
+  "meta.begin.msg": "起始楼层不能为空",
   "meta.site.msg": "施工地点不能为空",
   "meta.date.msg": "施工日期不能为空",
-  "meta.person.msg": "施工人员不能为空",
-  "meta.number.msg": "电梯序号不能为空",
+  "meta.supervisor.msg": "施工人员不能为空",
+  "meta.id.msg": "电梯序号不能为空",
   "meta.submit.success": "项目创建成功",
-  "middleFloor.doorHeight": "门洞高度",
-  "middleFloor.doorWidth": "门洞宽度",
-  "middleFloor.riserHeight": "踢脚高度",
-  "middleFloor.riserWidth": "踢脚宽度",
-  "middleFloor.riserMsg": "踢脚高度不能为空",
-  "middleFloor.doorHeight.placeholder": "请输入门洞高度",
-  "middleFloor.doorWidth.placeholder": "请输入门洞宽度",
-  "middleFloor.riserHeight.placeholder": "请输入踢脚高度",
-  "middleFloor.riserWidth.placeholder": "请输入踢脚宽度",
-  "middleFloor.doorHeight.msg": "门洞高度不能为空",
-  "middleFloor.doorWidth.msg": "门洞宽度不能为空",
-  "middleFloor.riserHeight.msg": "踢脚高度不能为空",
-  "middleFloor.riserWidth.msg": "踢脚宽度不能为空",
-  "middleFloor.next": "下一层",
-  "middleFloor.preview": "预览"
+  "intergral.underSlabHeight": "顶板下高度",
+  "intergral.underSlabHeight.placeholder": "请输入顶板下高度",
+  "intergral.underSlabHeight.msg": "顶板下高度不能为空",
+  "intergral.elevatorTrip": "行程高度",
+  "intergral.elevatorTrip.placeholder": "请输入行程高度",
+  "intergral.elevatorTrip.msg": "行程高度不能为空",
+  "intergral.pitHeight": "底坑深度",
+  "intergral.pitHeight.placeholder": "请输入底坑深度",
+  "intergral.pitHeight.msg": "底坑深度不能为空",
+  "intergral.preview": "预览",
+  "intergral.next": "下一步",
+  "intergral.submit.success": "整体参数设置成功",
+  "pit.height": "底坑高度",
+  "pit.height.placeholder": "请输入底坑高度",
+  "pit.height.msg": "底坑高度不能为空",
+  "pit.width": "底坑宽度",
+  "pit.width.placeholder": "请输入底坑宽度",
+  "pit.width.msg": "底坑宽度不能为空",
+  "pit.depth": "底坑深度",
+  "pit.depth.placeholder": "请输入底坑深度",
+  "pit.depth.msg": "底坑深度不能为空",
+  "pit.preview": "预览",
+  "pit.next": "下一步",
+  "pit.submit.success": "底坑数据设置成功",
+  "floor.title": "当前楼层",
+  "floor.height": "门洞高度",
+  "floor.height.placeholder": "请输入门洞高度",
+  "floor.height.msg": "门洞高度不能为空",
+  "floor.width": "门洞宽度",
+  "floor.width.placeholder": "请输入门洞宽度",
+  "floor.width.msg": "门洞宽度不能为空",
+  "floor.sillHeight": "踢脚高度",
+  "floor.sillHeight.placeholder": "请输入踢脚高度",
+  "floor.sillHeight.msg": "踢脚高度不能为空",
+  "floor.preview": "预览",
+  "floor.next": "下一步",
+  "floor.nextfloor.success": "设置成功,请继续设置下一层数据",
+  "floor.submit.success": "楼层数据设置成功",
+  "bi.height": "操作箱高度",
+  "bi.height.placeholder": "请输入操作箱高度",
+  "bi.height.msg": "操作箱高度不能为空",
+  "bi.width": "操作箱宽度",
+  "bi.width.placeholder": "请输入操作箱宽度",
+  "bi.width.msg": "操作箱宽度不能为空",
+  "bi.depth": "操作箱深度",
+  "bi.depth.placeholder": "请输入操作箱深度",
+  "bi.depth.msg": "操作箱深度不能为空",
+  "bi.preview": "预览",
+  "bi.next": "下一步",
+  "bi.submit.success": "操作箱数据设置成功",
+  "slab.height": "顶板下预留高度",
+  "slab.height.placeholder": "请输入顶板下预留高度",
+  "slab.height.msg": "顶板下预留高度不能为空",
+  "slab.width": "顶板下预留宽度",
+  "slab.width.placeholder": "请输入顶板下预留宽度",
+  "slab.width.msg": "顶板下预留宽度不能为空",
+  "slab.depth": "顶板下预留深度",
+  "slab.depth.placeholder": "请输入顶板下预留深度",
+  "slab.depth.msg": "顶板下预留深度不能为空",
+  "slab.preview": "预览",
+  "slab.next": "保存项目",
+  "slab.submit.success": "项目保存成功",
+  "history.btn.edit": "编辑",
+  "history.btn.delete": "删除",
+  "history.btn.export": "导出",
+  "history.delete.success": "项目删除成功",
+  "pdf.btn.save": "保存"
 }
