--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -48,5 +48,51 @@
   "pit.depth": "Pit depth",
   "pit.depth.placeholder": "Please enter the pit depth",
   "pit.depth.msg": "Pit depth is required",
-  "pit.submit.success": "Pit parameter setting successful"
+  "pit.submit.success": "Pit parameter setting successful",
+  "floor.title": "Current floor",
+  "floor.height": "Doorway height",
+  "floor.height.placeholder": "Please enter the doorway height",
+  "floor.height.msg": "Doorway height cannot be empty",
+  "floor.width": "Doorway width",
+  "floor.width.placeholder": "Please enter the doorway width",
+  "floor.width.msg": "Doorway width cannot be empty",
+  "floor.sillHeight": "Sill height",
+  "floor.sillHeight.placeholder": "Please enter the sill height",
+  "floor.sillHeight.msg": "Sill height cannot be empty",
+  "floor.preview": "Preview",
+  "floor.next": "Next step",
+  "floor.nextfloor.success": "Setting successful, please continue to set the next layer data",
+  "floor.submit.success": "Floor data setting successful",
+  "bi.height": "Operation box height",
+  "bi.height.placeholder": "Please enter the operation box height",
+  "bi.height.msg": "Operation box height cannot be empty",
+  "bi.width": "Operation box width",
+  "bi.width.placeholder": "Please enter the operation box width",
+  "bi.width.msg": "Operation box width cannot be empty",
+  "bi.depth": "Operation box depth",
+  "bi.depth.placeholder": "Please enter the operation box depth",
+  "bi.depth.msg": "Operation box depth cannot be empty",
+  "bi.preview": "Preview",
+  "bi.next": "Next step",
+  "bi.submit.success": "Operation box data setting successful",
+  "slab.height": "Reserved height under the top plate",
+  "slab.height.placeholder": "Please enter the reserved height under the top plate",
+  "slab.height.msg": "Reserved height under the top plate cannot be empty",
+  "slab.width": "Reserved width under the top plate",
+  "slab.width.placeholder": "Please enter the reserved width under the top plate",
+  "slab.width.msg": "Reserved width under the top plate cannot be empty",
+  "slab.depth": "Reserved depth under the top plate",
+  "slab.depth.placeholder": "Please enter the reserved depth under the top plate",
+  "slab.depth.msg": "Reserved depth under the top plate cannot be empty",
+  "slab.preview": "Preview",
+  "slab.next": "Save project",
+  "slab.submit.success": "Project saved successfully",
+  "history.btn.edit": "Edit",
+  "history.btn.delete": "Delete",
+  "history.btn.export": "Export",
+  "history.delete.success": "Project deleted successfully",
+  "pdf.btn.save": "Save",
+  "pdf.toast.upload": "Generating PDF file...",
+  "pdf.toast.success": "File saved",
+  "pdf.toast.error": "PDF file generation failed"
 }
