--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -48,5 +48,51 @@
   "pit.depth": "Profondeur de la cuvette",
   "pit.depth.placeholder": "Veuillez entrer la profondeur de la cuvette",
   "pit.depth.msg": "La profondeur de la cuvette est requise",
-  "pit.submit.success": "Réglage de la cuvette réussi"
+  "pit.submit.success": "Réglage de la cuvette réussi",
+  "floor.title": "Étage actuel",
+  "floor.height": "Hauteur de la porte",
+  "floor.height.placeholder": "Veuillez entrer la hauteur de la porte",
+  "floor.height.msg": "La hauteur de la porte ne peut pas être vide",
+  "floor.width": "Largeur de la porte",
+  "floor.width.placeholder": "Veuillez entrer la largeur de la porte",
+  "floor.width.msg": "La largeur de la porte ne peut pas être vide",
+  "floor.sillHeight": "Hauteur du seuil",
+  "floor.sillHeight.placeholder": "Veuillez entrer la hauteur du seuil",
+  "floor.sillHeight.msg": "La hauteur du seuil ne peut pas être vide",
+  "floor.preview": "Aperçu",
+  "floor.next": "Étape suivante",
+  "floor.nextfloor.success": "Réglage réussi, veuillez continuer à définir les données de la couche suivante",
+  "floor.submit.success": "Réglage des données de l'étage réussi",
+  "bi.height": "Hauteur de la boîte d'opération",
+  "bi.height.placeholder": "Veuillez entrer la hauteur de la boîte d'opération",
+  "bi.height.msg": "La hauteur de la boîte d'opération ne peut pas être vide",
+  "bi.width": "Largeur de la boîte d'opération",
+  "bi.width.placeholder": "Veuillez entrer la largeur de la boîte d'opération",
+  "bi.width.msg": "La largeur de la boîte d'opération ne peut pas être vide",
+  "bi.depth": "Profondeur de la boîte d'opération",
+  "bi.depth.placeholder": "Veuillez entrer la profondeur de la boîte d'opération",
+  "bi.depth.msg": "La profondeur de la boîte d'opération ne peut pas être vide",
+  "bi.preview": "Aperçu",
+  "bi.next": "Étape suivante",
+  "bi.submit.success": "Réglage des données de la boîte d'opération réussi",
+  "slab.height": "Hauteur réservée sous la plaque supérieure",
+  "slab.height.placeholder": "Veuillez entrer la hauteur réservée sous la plaque supérieure",
+  "slab.height.msg": "La hauteur réservée sous la plaque supérieure ne peut pas être vide",
+  "slab.width": "Largeur réservée sous la plaque supérieure",
+  "slab.width.placeholder": "Veuillez entrer la largeur réservée sous la plaque supérieure",
+  "slab.width.msg": "La largeur réservée sous la plaque supérieure ne peut pas être vide",
+  "slab.depth": "Profondeur réservée sous la plaque supérieure",
+  "slab.depth.placeholder": "Veuillez entrer la profondeur réservée sous la plaque supérieure",
+  "slab.depth.msg": "La profondeur réservée sous la plaque supérieure ne peut pas être vide",
+  "slab.preview": "Aperçu",
+  "slab.next": "Enregistrer le projet",
+  "slab.submit.success": "Projet enregistré avec succès",
+  "history.btn.edit": "Éditer",
+  "history.btn.delete": "Supprimer",
+  "history.btn.export": "Exporter",
+  "history.delete.success": "Projet supprimé avec succès",
+  "pdf.btn.save": "Enregistrer",
+  "pdf.toast.upload": "Génération du fichier PDF...",
+  "pdf.toast.success": "Fichier enregistré",
+  "pdf.toast.error": "Échec de la génération du fichier PDF"
 }
